@@ -84,6 +84,7 @@ dpkg (1.18.0) UNRELEASED; urgency=low
   * Output strings fixes and improvements:
     - Say “execute” instead of “exec” in Dpkg::Changelog::Parse error message.
     - Say “package” instead of “it” in dpkg-name warning message.
+    - Uppercase field names in error messages.
 
   [ Raphaël Hertzog ]
   * Drop myself from Uploaders.
